[package]
name = "kiagateway_https"
version = "0.1.1"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "a light and performant TCP domain-based traffic controller - HTTPS-only version"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/kiagateway"
readme = "README.md"
categories = ["network-programming"]
keywords = ["proxy-routing", "gateway", "domain-based-routing", "tls-passthrough", "proxy"]

[dependencies]
tokio = { version = "1.49.0", features = ["net", "rt-multi-thread", "io-util", "time", "macros"] }
chrono = "0.4.44"
uuid = { version = "1.21.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0.3"
